--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
         <!--STILOS-->
-            <link rel="stylesheet" href="/CSS/style.css">
+            <link rel="stylesheet" href="../CSS/style.css">
     </head>
 <body>
     <!--MAIN WRAPPER-->
